--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,12 +11,13 @@ binding = "AI"
 [[kv_namespaces]]
 binding = "CHAT_HISTORY"
 id = "自己的KV ID"
-preview_id = "自己的KV ID"
+preview_id = "d0d5904dda1d4d499ba14e3e1551c159"
 
 # 环境变量配置
 # 部署前请修改为安全的密码
 [vars]
-CHAT_PASSWORD = "自己的密码"
+CHAT_PASSWORD = "lucky"
+
 
 
 
