--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,7 +9,7 @@ binding = "AI"
 # 需要先在 Cloudflare Dashboard 创建 KV 命名空间
 # 然后替换下面的 id 和 preview_id
 [[kv_namespaces]]
-binding = "CHAT_HISTORY"
+binding = "gpt"
 id = "自己的KV ID"
 preview_id = "自己的KV ID"
 
@@ -17,6 +17,7 @@ preview_id = "自己的KV ID"
 # 部署前请修改为安全的密码
 [vars]
 CHAT_PASSWORD = "自己的密码"
+
 
 
 
